tests/error/multiplyInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin multiplyInteger)(con string "Ola")](con integer 10)])